--- a/p2/index.html
+++ b/p2/index.html
@@ -1,35 +1,21 @@
-<!--A Design by W3layouts 
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html>
 <head>
-<title>Modern Music A Music Category Flat Bootstarp Resposive Website Template | Home :: w3layouts</title>
+<title>Los simpsons</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<!--theme-style-->
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />	
-<!--//theme-style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Modern Music Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!--fonts-->
 <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
-<!--//fonts-->
-<!---->
 <link rel="stylesheet" href="css/slider.css" type="text/css" media="screen" />
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.nivo.slider.js"></script>
-<!-- Scroll top -->
 <script type="text/javascript" src="js/move-top.js"></script>
 <script type="text/javascript" src="js/easing.js"></script>
-<!--End  Scroll top -->
  <script type="text/javascript">
     $(window).load(function() {
         $('#slider').nivoSlider();
@@ -38,33 +24,32 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </head>
 <body>
   <div class="container">
-  	 <div class="header">  	
-		 		<!-- Slider -->				
+  	 <div class="header">  				
 				     <div class="slider">
 				      <div class="slider-wrapper theme-default">
 				            <div id="slider" class="nivoSlider">
-				                <img src="images/2.jpg" data-thumb="images/2.jpg" alt="" />
-				                <img src="images/1.jpg" data-thumb="images/1.jpg" alt="" />
-				                <img src="images/3.jpg" data-thumb="images/3.jpg" alt="" />
-				                <img src="images/1.jpg" data-thumb="images/1.jpg" alt="" />
+				                <img src="images/The_Simpsons_Logo.png" data-thumb="images/The_Simpsons_logo.png" alt="" />
+				                <img src="images/simpsons20thchokelogo_clouds2.jpg" data-thumb="images/1.jpg" alt="" />
+				                <img src="images/the-simpsons-movie-4f7b330acdfd8.png" data-thumb="images/3.jpg" alt="" />
+				                <img src="images/3_0eaba74de9.jpg" data-thumb="images/1.jpg" alt="" />
 				            </div>
 				        </div>
 				          <div class="header_desc">
 				 			 <div class="logo">
-				 				<a href="index.html"><img src="images/log.png" alt="" /></a>
+				 				<a href="index.html"><img src="images/The_Simpsons_Logo.png" alt="" /></a>
 							 </div>							
 		     		    </div>
 				   </div>
-			     <!--- End Slider --->
 		   <div class="header-bottom">
 		      <div class="top-nav">
 			  <span class="menu"><img src="images/menu.png" alt=""> </span>
 
 					    <ul>
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="404.html">Albums</a></li>
-							<li><a href="blog.html">Blog</a></li>
+							<li><a href="about.html">Mejores momentos</a></li>
+							<li><a href="404.html">Curiosidades</a></li>
+							<li><a href="blog.html">Springfield</a></li>
+                            <li><a href="">Personajes</a></li>
 							<li><a href="contact.html">Contact</a></li>
 							<div class="clearfix"></div>
 						</ul>
@@ -89,7 +74,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                </div>
 		 </div>
 	</div>
-	<!---->
 
 		<div class="container">
 		<div class="content">
@@ -124,7 +108,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="clearfix"></div>
 			</div>
 			</div>
-			<!---->
 	<link rel="stylesheet" href="css/swipebox.css" />
 	<script src="js/jquery.swipebox.min.js"></script> 
 	    <script type="text/javascript">
@@ -132,8 +115,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				$(".swipebox").swipebox();
 			});
 		</script>
-
-	<!---->
 
 		<div class="content-bottom">
 			<div class="col-md-8">
@@ -200,17 +181,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 
   <div class="container">
-  <!---->
 	<div class="footer">
 			<div class="footer-top">
 				<div class="col-md-4 amet-sed ">
 				<h4>Twitter Feed</h4>
-				<p><a href="#">@ Music</a> Lorem ipsum is simply dummy text hid Lorem ipsum is simply dummy text hidden variab 3 hours ago</p>
-				<p><a href="#">@ Music</a> Lorem ipsum is simply dummy text hid Lorem ipsum is simply dummy text hidden variab 3 hours ago</p>				
+				<p><a href="#">@ TheSimps</a> </p>
+				<p><a href="#">@ TheSimps</a> </p>				
 				<ul class="social-in">
-					<li><i> </i>sector 21 , main road </li>
-					<li class="phone"><i> </i> +71999-56985</li>
-					<li class="mail"><a href="mailto:contact@example.com"><i> </i> contact@example.com</a></li>
+					<li><i> </i>Evergreen Terrace, 742 </li>
+					<li class="phone"><i> </i> +31664588202</li>
+					<li class="mail"><a><i> </i> TheSimpsons@Springfield.usa</a></li>
 				</ul>
 				</div>
 				<div class="col-md-4 amet-in">
@@ -220,10 +200,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="#"><img src="images/fi2.jpg" alt="" class="img-responsive"></a></li>
 						<li><a href="#"><img src="images/fi1.jpg" alt="" class="img-responsive"></a></li>
 						<li><a href="#"><img src="images/fi3.jpg" alt="" class="img-responsive"></a></li>
-						<li><a href="#"><img src="images/fi4.jpg" alt="" class="img-responsive"></a></li>
-						<li><a href="#"><img src="images/fi5.jpg" alt="" class="img-responsive"></a></li>
-						<li><a href="#"><img src="images/fi6.jpg" alt="" class="img-responsive"></a></li>
-						<li><a href="#"><img src="images/fi3.jpg" alt="" class="img-responsive"></a></li>
+						<li><a href="#"><img src="images/476D52AD-D736-4FBE-B77B-75C0152FCD5F-3260-0000032777354021_zps9d59cdf9.jpg" alt="" class="img-responsive"></a></li>
 					</ul>
 				</div>
 				<div class="col-md-4 amet-sed ">
@@ -241,7 +218,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			
 		</div>
 	 <div class="copy">
-		 	<p >© 2015 Modern Music All Rights Reserved | Design by  <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
+		 	<p >© 2016 TheSimpsons All Rights Reserved | Design by Someone </p>
 		</div>	
   </div>  
 </body>
