--- a/p2/muertes.html
+++ b/p2/muertes.html
@@ -84,6 +84,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 </div>
 	</div>
 	<!---->
+	 <div class="span">
 			<div class="cosa">
 				<img src="https://i.ytimg.com/vi/-bj_H7zskog/maxresdefault.jpg" height=320px; width=1100px>
                  <tbody><tr>
