Cambio del contacto my nigga

--- a/p2/muertes.html
+++ b/p2/muertes.html
@@ -57,7 +57,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					    <ul>
 							<li ><a href="index.html">Home</a></li>
 							<li><a href="about.html">About</a></li>
-							<li class="active"><a href="404.html">Albums</a></li>
+							<li class="active"><a href="muertes.html">Muertes</a></li>
 							<li><a href="blog.html">Blog</a></li>
 							<li><a href="contact.html">Contact</a></li>
 							<div class="clearfix"></div>
