--- a/p2/contact.html
+++ b/p2/contact.html
@@ -57,7 +57,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					    <ul>
 							<li ><a href="index.html">Home</a></li>
 							<li><a href="about.html">About</a></li>
-							<li><a href="404.html">Albums</a></li>
+							<li><a href="muertes.html">Muertes</a></li>
 							<li><a href="blog.html">Blog</a></li>
 							<li class="active"><a href="contact.html">Contact</a></li>
 							<div class="clearfix"></div>
@@ -87,40 +87,41 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="container">
 		<div class="content">
 			<div class="contact">
-				<h2>CONTACT</h2>
+				<h2>COLABORA CON NOSOTROS</h2>
 				
 				
 			
 			<div class="contact-form">
 				<div class="col-md-6 contact-grid">
-					<h4>Want to work with me?</h4>
+					<h4>Estamos buscando personas que nos ayuden a subir todos los capítulos en Español de la serie ¿Te apuntas?</h4>
 					<form>
-						<p class="your-para">Name</p>
+						<p class="your-para">Nombre</p>
+						<input type="text" value="" onfocus="this.value='';" onblur="if (this.value == '') {this.value ='';}">
+						<p class="your-para">País</p>
 						<input type="text" value="" onfocus="this.value='';" onblur="if (this.value == '') {this.value ='';}">
 						<p class="your-para">Email</p>
 						<input type="text" value="" onfocus="this.value='';" onblur="if (this.value == '') {this.value ='';}">
 			
-						<p class="your-para">Message:</p>
+						<p class="your-para">Experiencia y motivos por el que le gustaría ayudarnos.</p>
 						<textarea cols="77" rows="6" value=" " onfocus="this.value='';" onblur="if (this.value == '') {this.value = '';}"></textarea>
 						<div class="send">
-							<input type="submit" value="Send" >
+							<input type="submit" value="Enviar" >
 						</div>
 					</form>
 				</div>
 				<div class="col-md-6 contact-in">
-					<h4>company information</h4>
-					<p class="sed-para"> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolor.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Contrary to popular belief</p>
+					<h4>Te buscamos a ti.</h4>
+					<p class="sed-para"> Somos 5 personas trabajando en el proyecto de "Simsonspedium" y buscamos colaboradores.</p>
+					<p>Tenemos apartados bastante completos con respecto a nuestro trabajo y actualmente con los estudios tenemos menos tiempo para subir el contenido necesario para el disfrute del usuario y por eso buscamos colaboradores que nos ayuden a subir capítulos y actualizar la información necesaria.</p>
 					<div class="more-address"> 
 						<div class="address-more">
-							<p>The company name,</p>
-							<p>Lorem ipsum dolor,</p>
-							<p>Glasglow Dr 40 Fe 72. </p>
+							<p>Simpsonspedium</p>
+							<p>Evergreen Terrace, 742</p>
 						</div>
 						<div class="address-left">
-							<p>Tel:1115550001</p>
+							<p>Tel:606606666</p>
 							<p>Fax:190-4509-494</p>
-							<p>Email:<a href="mailto:contact@example.com"> contact@example.com</a></p>
+							<p>Email:<a href="mailto:inforsimpson@springfield.us"> inforsimpson@springfield.us</a></p>
 						</div>
 						<div class="clearfix"> </div>
 				</div>
@@ -128,12 +129,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="clearfix"> </div>
 			</div>
 <div class="map">
-			<h4>our location</h4>
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d37494223.23909492!2d103!3d55!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x453c569a896724fb%3A0x1409fdf86611f613!2sRussia!5e0!3m2!1sen!2sin!4v1415776049771"></iframe>
+			<h4>Nuestra localización</h4>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3358.3753156430944!2d-117.1598580848205!3d32.67606388100266!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzLCsDQwJzMzLjgiTiAxMTfCsDA5JzI3LjYiVw!5e0!3m2!1ses!2ses!4v1480668534993" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 			</div>
 			
 		</div>
-
 		</div>
 	</div>
  <div class="container">
@@ -178,7 +178,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			
 		</div>
 	 <div class="copy">
-		 	<p >© 2015 Modern Music All Rights Reserved | Design by  <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
+		 	<p >© 2015 Modern Music All Rights Reserved | Design by  <a href="http://youtube.com/cmsrxeholo" target="_blank">RequixWorld</a> </p>
 		</div>	
   </div>  
 </body>
