--- a/p2/about.html
+++ b/p2/about.html
@@ -89,23 +89,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="content">
 		<div class="about">
 		
-				<h3>ABOUT</h3>
+				<h3>ALGUNOS MEJORES MOMENTOS</h3>
 				<div class="about-in">
 					<div class="col-md-8 in-profile">
-						<h4>OUR PROFILE</h4>
+						<h4>Momentos Graciosos</h4>
 						<div class="our-grid">
 							<div class="col-md-6 sit-in">
 								<a href="#" >
-									<img src="images/ab.jpg" alt="image" class="img-responsive ">
+									<img src="images/familia.jpg" alt="image" class="img-responsive ">
 								</a>	
 							</div>				
 								<div class="col-md-6 our-head">
-									<h6 ><a href="#">Lorem ipsum dolor sit amet, consectetur adipisci ngelit. Donec nisi sem, vestibulum</a></h6>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nisi sem, vestibulum ac lobortis quis, aliquet in metus. Suspendi sse a nibh id eros consectetur laoreet. Etiam viverra auctor orci, eu mattis ipsum rutrum nec.
-									Etortor tortor in turpis. Proin mauris nulla, rutrum aliquet arcu vel, porttitor varius dolor. Phasellus vitae tincidunt orci, et faucibus eros. Sed dolor sapien, pharetra placerat feugiat.rutrum aliquet arcu vel, porttitor varius dolor. Phasellus vitae tincidunt orci, et faucibus eros. Sed dolor.</p>
+									<h6 ><a href="#">Una serie que ha triunfado gracias a su gran humor</a></h6>
+									<p>Si eres un fiel seguidor de la serie, aqui podrás ver algunos momentos graciosos de la serie.</p>
 								</div>
 							<div class="clearfix"> </div>
-							<p>Proin mauris nulla, rutrum aliquet arcu vel, porttitor varius dolor. Phasellus vitae tincidunt orci, et faucibus eros. Sed dolor sapien, pharetra placerat feugiat non, molestie nec elit.Aenean fringilla metus enim, non congue velit porta id. Mauris non lacus sollicitudin, suscipit erat eu, sodales metus. Pellentesque sit amet fringilla orci. Suspendisse lacinia quam et sapien blandit, eu mattis risus posuere. Morbi turpis lorem, vestibulum at turpis vel, suscipit tristique urna. Sed nec dapibus tellus, vel fringilla turpis. Phasellus mollis, lacus sed auct or lobortis, ante nisl tincidunt nibh.</p>
+							<p>La serie tiene muchos momentos graciosos y momentos que os resultarán muy familiares, como por ejemplo cuando homer simpson va a un campamento de Rock y salen los Rolling Stones.</p>
 						</div>
 					</div>
 					<div class="col-md-4 in-profile">
@@ -141,27 +140,27 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 	<div class="content-team ">
 			
-				<h4> TEAM</h4>
+				<h4> Guiños</h4>
 				<div class="team-left">					
 					<div class="col-md-3 team-top">
-					<a href="#"><img class="img-responsive  mix-in" src="images/p1.jpg" alt=""></a>
-						<h6><a href="#">Duis autem</a></h6>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+					<a href="#"><img class="img-responsive  mix-in" src="images/drogao.jpg" alt=""></a>
+						<h6><a href="#">Homer y la adicción a la maria</a></h6>
+						<p>y pensar que la mariguana terapeutica tiene efectos positivos.</p>
 					</div>
 					<div class="col-md-3 team-top ">
-						<a href="#"><img class="img-responsive  mix-in" src="images/p2.jpg" alt=""></a>
-						<h6><a href="#">Duis autem</a></h6>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+						<a href="#"><img class="img-responsive  mix-in" src="images/presidente.jpg" alt=""></a>
+						<h6><a href="#">Un presidente digno</a></h6>
+						<p>Seguro que votarás a este antes que a Donal Trump.</p>
 					</div>
 					<div class="col-md-3 team-top">
-						<a href="#"><img class="img-responsive  mix-in" src="images/p3.jpg" alt=""></a>
-						<h6><a href="#">Duis autem</a></h6>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+						<a href="#"><img class="img-responsive  mix-in" src="images/clasico.jpg" alt=""></a>
+						<h6><a href="#">Clasicos en mente</a></h6>
+						<p>Los clasicos de Disney.</p>
 					</div>
 					<div class="col-md-3 team-top top-team">
-						<a href="#"><img class="img-responsive  mix-in" src="images/p4.jpg" alt=""></a>
-						<h6><a href="#">Duis autem</a></h6>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+						<a href="#"><img class="img-responsive  mix-in" src="images/perrohendrix.jpg" alt=""></a>
+						<h6><a href="#">El guiño a Jimi Hendrix</a></h6>
+						<p>prueba a darle una guitarra haber si toca algo.</p>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
