--- a/p2/index.html
+++ b/p2/index.html
@@ -78,31 +78,31 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 		<div class="content">
 		<div class="content-top-grid">
-				<h3>MY MUSIC</h3>
+				<h3>La Familia Simpsons</h3>
 				<div class="content-top-in">
 				<div class="col-md-4 grid">
 					<a href="images/a1.jpg" class="b-link-stripe b-animate-go  thickbox swipebox"><img class="img-responsive" src="images/a1.jpg" alt=""/></a>
 					<div class="simply" >
-						<h4><a href="#">Exerci tation ullamcorper suscipit</a></h4>
-						<p>A wonderful serenity has taken possession of my entire soul exerci tation ullamcorper suscipit</p>
-					<a href="#" class="hvr-sweep-to-right">More Info</a> 
+						<h4><a href="">Conoce a los personajes.</a></h4>
+						<p>Aunque la serie sigue la vida de una peculiar familia de Springfield, también existen sus queridos vecinos.</p>
+					<a href="#" class="hvr-sweep-to-right">Conócelos</a> 
 					</div>
 
 				</div>
 				<div class="col-md-4 grid">
 					<a href="images/a2.jpg" class="b-link-stripe b-animate-go  thickbox swipebox"><img class="img-responsive" src="images/a2.jpg" alt=""/></a>
 					<div class="simply" >
-						<h4><a href="#">Exerci tation ullamcorper suscipit</a></h4>
-						<p>A wonderful serenity has taken possession of my entire soul exerci tation ullamcorper suscipit</p>
-						<a href="#" class="hvr-sweep-to-right">More Info</a> 
+						<h4><a href="#">La preciosa ciudad de Springfield</a></h4>
+						<p>Conoce la ciudad donde vive esta divertida familia y sus lugares más característicos.</p>
+						<a href="#" class="hvr-sweep-to-right">Visita Springfield</a> 
 					</div>
 				</div>
 				<div class="col-md-4 grid">
 					<a href="images/a3.jpg" class="b-link-stripe b-animate-go  thickbox swipebox"><img class="img-responsive" src="images/a3.jpg" alt=""/></a>
 					<div class="simply" >
-						<h4><a href="#">Exerci tation ullamcorper suscipit</a></h4>
-						<p>A wonderful serenity has taken possession of my entire soul exerci tation ullamcorper suscipit</p>
-						<a href="#" class="hvr-sweep-to-right">More Info</a> 
+						<h4><a href="#">Muertes y curiosidades</a></h4>
+						<p>Esta serie tiene grandes curiosidades y una lista de muertes</p>
+						<a href="#" class="hvr-sweep-to-right">Infórmate</a> 
 					</div>
 				</div>
 				<div class="clearfix"></div>
@@ -119,27 +119,40 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="content-bottom">
 			<div class="col-md-8">
 				<div class="content-grid">
-					<h3>Fusce mollis consectetur torto</h3>
-					<p>Aliquam mattis varius dolor, id adipiscing metus.</p>
+					<h3>Los Simpsons</h3>
+					<p>Sus creadores y premios</p>
 				</div>
 					<div class="col-md-6 grid-top">
 						<a href="#"><img src="images/pi1.jpg" alt="" class="img-responsive"></a>
-						<p >Proin lobortis erat sed metus interdum vel is all si aliquetsil purus cursus. Sed lacus erat bibnioum in rutrumriCurabitur condimentum erat non i sed.Sed ultrices posere mauris nec volutpat. ve asl luctus id libero.Suspendis alelri interdum poatill aliquet. Nunc molestie felis quis turis fringilla alryjhl tincunt. Nulla facilisi. Sed ac imperdiet sem.</p>
+						<p >La familia más característica de America fue creada por Matt Groening. Debuto el 17 de Diciembre de 1998 en la cadena de televisión la FOX. Con el paso de los años fue nominado y ganado varios premios.</p>
+                        <p>Además dicha serie se expandio al resto del mundo convirtiendose en la familia americana más conocida en el mundo por sus historias de 25min.</p>
+                        <p>Esta increible serie de televisión es creada por varias difersas productoras de animación: AKOM, Anivision, Rough Draft Studios, U.S. Animation, Inc. y Toonzone Entertainment.</p>
+                        <p>Los guionistas de la serie son un gran grupo de personas con Mike Mendel, Jeff Goldstein, Al Jean, David Mirkin y muchos más.</p>
+                        <p>Esta gran serie consta de una serie de 604 episodios en 28 temporadas y de las cuales tienen especiales tanto para navidad como de halloween.</p>
 
 							</div>
 							<div class="col-md-6 grid-middle">
 					<ul>
-					<li><a href="#"><i> </i>Phasellus in urna</a></li>
-					<li><a href="#"><i> </i>Vestibulum vitae lorem</a></li>
-					<li><a href="#"><i> </i>augue turpis varius orci</a></li>
-					<li><a href="#"><i> </i>Sed ultrices posere</a></li>
-					<li><a href="#"><i> </i>Phasellus in urna</a></li>
-					<li><a href="#"><i> </i>Vestibulum vitae lorem</a></li>
-					<li><a href="#"><i> </i>augue turpis varius orci</a></li>
-					<li><a href="#"><i> </i>Sed ultrices posere</a></li>
-					<li><a href="#"><i> </i>Vestibulum vitae lorem</a></li>
-					<li><a href="#"><i> </i>augue turpis varius orci</a></li>
-					<li><a href="#"><i> </i>Sed ultrices posere</a></li>
+					<li><a href="#"><i> </i>Mejor programa internacional de comedia 2001</a></li>
+					<li><a href="#"><i> </i>Mejor programa internacional de comedia 2004</a></li>
+					<li><a href="#"><i> </i>Mejor programa internacional de comedia 2005</a></li>
+					<li><a href="#"><i> </i>Premios Emmy</a></li>
+					<li><a href="#"><i> </i>Life on the Fast Lane</a></li>
+					<li><a href="#"><i> </i>Homer vs. Lisa and the 8th Commandment</a></li>
+					<li><a href="#"><i> </i>Homer's Phobia</a></li>
+					<li><a href="#"><i> </i>Eternal Moonshine of the Simpson Mind</a></li>
+					<li><a href="#"><i> </i>Emmy a mejor actuacion de voz 1992</a></li>
+					<li><a href="#"><i> </i>Emmy a mejor actuacion de voz 1993</a></li>
+					<li><a href="#"><i> </i>Emmy a mejor actuacion de voz 1998</a></li>
+                    <li><a href="#"><i> </i>Premio Annie 1992</a></li>
+					<li><a href="#"><i> </i>Premio Annie 1993</a></li>
+					<li><a href="#"><i> </i>Premio Annie 1994</a></li>
+                    <li><a href="#"><i> </i>Premio Annie 1995</a></li>
+					<li><a href="#"><i> </i>Premio Annie 1996</a></li>
+					<li><a href="#"><i> </i>Premio Annie 1997</a></li>
+                    <li><a href="#"><i> </i>Premio Annie 1998</a></li>
+					<li><a href="#"><i> </i>Premios Genesis 1993</a></li>
+					<li><a href="#"><i> </i>Premios Genesis 1994</a></li>
 				</ul>		
 				</div>
 				<div class="clearfix"> </div>
@@ -147,27 +160,35 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-4 sap">
 				<!---->
 				<div class="cur-right">
-					<h3>Curabitur egestas</h3>
+					<h3>Actores de voz</h3>
 						<div class="product">
-							<a href="#" class="fashion"><img class="img-responsive " src="images/pic.jpg" alt=""></a>
+							<a href="#" class="fashion"><img class="img-responsive " src="images/DAN.jpg" alt=""></a>
 							<div class="grid-product">
-							<p>Phasellus scelerisque enim eget eros accumsan eget ullamco</p>
+							<p>Dan Castellaneta: Homer Simpson</p>
 							<a href="#" class="more-info">More Info <i> </i></a> 
 							</div>
 						<div class="clearfix"> </div>
 						</div>
 						<div class="product">
-							<a href="#" class="fashion"><img class="img-responsive " src="images/pic1.jpg" alt=""></a>
+							<a href="#" class="fashion"><img class="img-responsive " src="images/JULIE.jpg" alt=""></a>
 							<div class="grid-product">
-							<p>Phasellus scelerisque enim eget eros accumsan eget ullamco</p>
+							<p>Julie Kavner: Marge Simpsons</p>
 							<a href="#" class="more-info">More Info <i> </i></a> 
 							</div>
 						<div class="clearfix"> </div>
 						</div>
 						<div class="product">
-							<a href="#" class="fashion"><img class="img-responsive" src="images/pic2.jpg" alt=""></a>
+							<a href="#" class="fashion"><img class="img-responsive" src="images/Nancy.jpg" alt=""></a>
 							<div class="grid-product">
-							<p>Phasellus scelerisque enim eget eros accumsan eget ullamco</p>
+							<p>Nancy Cartwright: Bart Simpsons</p>
+							<a href="#" class="more-info">More Info <i> </i></a> 
+							</div>
+						<div class="clearfix"> </div>
+                        </div>
+                            <div class="product">
+							<a href="#" class="fashion"><img class="img-responsive " src="images/Yeardley.jpg" alt=""></a>
+							<div class="grid-product">
+							<p>Yaerdley Smith: Lisa Simpsons</p>
 							<a href="#" class="more-info">More Info <i> </i></a> 
 							</div>
 						<div class="clearfix"> </div>
