--- a/p2/index.html
+++ b/p2/index.html
@@ -47,9 +47,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					    <ul>
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="about.html">Mejores momentos</a></li>
-							<li><a href="404.html">Curiosidades</a></li>
+							<li><a href="muertes.html">Curiosidades</a></li>
 							<li><a href="blog.html">Springfield</a></li>
-                            <li><a href="">Personajes</a></li>
+                            <li><a href="single.html">Personajes</a></li>
 							<li><a href="contact.html">Contact</a></li>
 							<div class="clearfix"></div>
 						</ul>
@@ -81,28 +81,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<h3>La Familia Simpsons</h3>
 				<div class="content-top-in">
 				<div class="col-md-4 grid">
-					<a href="images/a1.jpg" class="b-link-stripe b-animate-go  thickbox swipebox"><img class="img-responsive" src="images/a1.jpg" alt=""/></a>
+					<a href="images/a1.jpg" class="b-link-stripe b-animate-go  thickbox swipebox"><img class="img-responsive" src="images/los_50_mejores_personajes_de_los_simpson_246965195_1182x667.jpg" alt=""/></a>
 					<div class="simply" >
-						<h4><a href="">Conoce a los personajes.</a></h4>
+						<h4><a href="single.html">Conoce a los personajes.</a></h4>
 						<p>Aunque la serie sigue la vida de una peculiar familia de Springfield, también existen sus queridos vecinos.</p>
-					<a href="#" class="hvr-sweep-to-right">Conócelos</a> 
+					<a href="single.html" class="hvr-sweep-to-right">Conócelos</a> 
 					</div>
 
 				</div>
 				<div class="col-md-4 grid">
-					<a href="images/a2.jpg" class="b-link-stripe b-animate-go  thickbox swipebox"><img class="img-responsive" src="images/a2.jpg" alt=""/></a>
+					<a href="images/a2.jpg" class="b-link-stripe b-animate-go  thickbox swipebox"><img class="img-responsive" src="images/The-Simpsons-Springfield-Oregon.jpg" alt=""/></a>
 					<div class="simply" >
-						<h4><a href="#">La preciosa ciudad de Springfield</a></h4>
+						<h4><a href="blog.html">La preciosa ciudad de Springfield</a></h4>
 						<p>Conoce la ciudad donde vive esta divertida familia y sus lugares más característicos.</p>
-						<a href="#" class="hvr-sweep-to-right">Visita Springfield</a> 
+						<a href="blog.html" class="hvr-sweep-to-right">Visita Springfield</a> 
 					</div>
 				</div>
 				<div class="col-md-4 grid">
-					<a href="images/a3.jpg" class="b-link-stripe b-animate-go  thickbox swipebox"><img class="img-responsive" src="images/a3.jpg" alt=""/></a>
+					<a href="images/a3.jpg" class="b-link-stripe b-animate-go  thickbox swipebox"><img class="img-responsive" src="images/uuuu31324y04_640px.jpg" alt=""/></a>
 					<div class="simply" >
-						<h4><a href="#">Muertes y curiosidades</a></h4>
+						<h4><a href="muertes.html">Muertes y curiosidades</a></h4>
 						<p>Esta serie tiene grandes curiosidades y una lista de muertes</p>
-						<a href="#" class="hvr-sweep-to-right">Infórmate</a> 
+						<a href="muertes.html" class="hvr-sweep-to-right">Infórmate</a> 
 					</div>
 				</div>
 				<div class="clearfix"></div>
@@ -123,7 +123,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<p>Sus creadores y premios</p>
 				</div>
 					<div class="col-md-6 grid-top">
-						<a href="#"><img src="images/pi1.jpg" alt="" class="img-responsive"></a>
+						<a href="#"><img src="images/How-rich-is-Matt-Groening.jpg" alt="" class="img-responsive"></a>
 						<p >La familia más característica de America fue creada por Matt Groening. Debuto el 17 de Diciembre de 1998 en la cadena de televisión la FOX. Con el paso de los años fue nominado y ganado varios premios.</p>
                         <p>Además dicha serie se expandio al resto del mundo convirtiendose en la familia americana más conocida en el mundo por sus historias de 25min.</p>
                         <p>Esta increible serie de televisión es creada por varias difersas productoras de animación: AKOM, Anivision, Rough Draft Studios, U.S. Animation, Inc. y Toonzone Entertainment.</p>
