--- a/p2/index.html
+++ b/p2/index.html
@@ -81,7 +81,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<h3>La Familia Simpsons</h3>
 				<div class="content-top-in">
 				<div class="col-md-4 grid">
-					<a href="images/a1.jpg" class="b-link-stripe b-animate-go  thickbox swipebox"><img class="img-responsive" src="images/los_50_mejores_personajes_de_los_simpson_246965195_1182x667.jpg" alt=""/></a>
+					<a href="images/los_50_mejores_personajes_de_los_simpson_246965195_1182x667.jpg" class="b-link-stripe b-animate-go  thickbox swipebox"><img class="img-responsive" src="images/los_50_mejores_personajes_de_los_simpson_246965195_1182x667.jpg" alt=""/></a>
 					<div class="simply" >
 						<h4><a href="single.html">Conoce a los personajes.</a></h4>
 						<p>Aunque la serie sigue la vida de una peculiar familia de Springfield, también existen sus queridos vecinos.</p>
@@ -90,7 +90,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 				</div>
 				<div class="col-md-4 grid">
-					<a href="images/a2.jpg" class="b-link-stripe b-animate-go  thickbox swipebox"><img class="img-responsive" src="images/The-Simpsons-Springfield-Oregon.jpg" alt=""/></a>
+					<a href="images/The-Simpsons-Springfield-Oregon.jpg" class="b-link-stripe b-animate-go  thickbox swipebox"><img class="img-responsive" src="images/The-Simpsons-Springfield-Oregon.jpg" alt=""/></a>
 					<div class="simply" >
 						<h4><a href="blog.html">La preciosa ciudad de Springfield</a></h4>
 						<p>Conoce la ciudad donde vive esta divertida familia y sus lugares más característicos.</p>
@@ -98,7 +98,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 				</div>
 				<div class="col-md-4 grid">
-					<a href="images/a3.jpg" class="b-link-stripe b-animate-go  thickbox swipebox"><img class="img-responsive" src="images/uuuu31324y04_640px.jpg" alt=""/></a>
+					<a href="images/uuuu31324y04_640px.jpg" class="b-link-stripe b-animate-go  thickbox swipebox"><img class="img-responsive" src="images/uuuu31324y04_640px.jpg" alt=""/></a>
 					<div class="simply" >
 						<h4><a href="muertes.html">Muertes y curiosidades</a></h4>
 						<p>Esta serie tiene grandes curiosidades y una lista de muertes</p>
@@ -206,8 +206,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="footer-top">
 				<div class="col-md-4 amet-sed ">
 				<h4>Twitter Feed</h4>
-				<p><a href="#">@ TheSimps</a> </p>
-				<p><a href="#">@ TheSimps</a> </p>				
+				<p><a href="#">@ TheSimps</a>Este fin de semana se realiza un concurso de camisetas Bart entra en nuestro TWITTER para saber más.</p>
+				<p><a href="#">@ TheSimps</a>En una semana realizaremos un concurso para recibir regalos como camisetas y tazas de la serie.</p>				
 				<ul class="social-in">
 					<li><i> </i>Evergreen Terrace, 742 </li>
 					<li class="phone"><i> </i> +31664588202</li>
@@ -217,10 +217,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="col-md-4 amet-in">
 				<h4>Photo Stream</h4>
 					<ul>
-						<li><a href="#"><img src="images/fi.jpg" alt="" class="img-responsive"></a></li>
-						<li><a href="#"><img src="images/fi2.jpg" alt="" class="img-responsive"></a></li>
-						<li><a href="#"><img src="images/fi1.jpg" alt="" class="img-responsive"></a></li>
-						<li><a href="#"><img src="images/fi3.jpg" alt="" class="img-responsive"></a></li>
+						<li><a href="#"><img src="images/Lambda.jpg" alt="" class="img-responsive"></a></li>
+						<li><a href="#"><img src="images/Abraham.jpg" alt="" class="img-responsive"></a></li>
+						<li><a href="https://www.youtube.com/channel/UCwo3ZUJl0M11wtffkegcK9w"><img src="images/AlvarofcoJuan.jpg" alt="" class="img-responsive"></a></li>
+						<li><a href="https://www.youtube.com/user/cmsrxeholo"><img src="images/Mendez.jpg" alt="" class="img-responsive"></a></li>
 						<li><a href="#"><img src="images/476D52AD-D736-4FBE-B77B-75C0152FCD5F-3260-0000032777354021_zps9d59cdf9.jpg" alt="" class="img-responsive"></a></li>
 					</ul>
 				</div>
@@ -239,7 +239,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			
 		</div>
 	 <div class="copy">
-		 	<p >© 2016 TheSimpsons All Rights Reserved | Design by Someone </p>
+		 	<p >© 2016 TheSimpsons All Rights Reserved | Design by G02 </p>
 		</div>	
   </div>  
 </body>
