--- a/p2/about.html
+++ b/p2/about.html
@@ -108,28 +108,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 					<div class="col-md-4 in-profile">
-					<h4>Our Capabilities</h4>
+					<h4>Top mejores momentos</h4>
 					<div class="col-in-about">
 						<span class="in-sed">1</span>
 						<div class="left-sit">
-							<h6><a href="#">Sed ut perspiciatis unde omnis iste natus error sit</a></h6>
-							<p>Mes cuml dia sed net lacus utenias cet inge iiqt es site am eismod icto ligulate ameti dapibustic du nt mtsen lus</p>
+							<h6><a href="#">Y con Maggie, Tres</a></h6>
+							<p>Mejor momento: El Sr. Burns readmite a Homer en la Central Nuclear, pero le coloca una placa que dice “Don’t forget: you’re here forever” (“No lo olvide: Usted está aquí para siempre”) para recordarle que no podrá volver a renunciar. Marge da a luz y Homer, que en un principio rechazaba la idea de un nuevo bebé, se enamora de Maggie desde el primer momento. Al volver al presente, Bart y Lisa se siguen preguntando por qué no hay fotos de Maggie. Homer les dice que sí que hay, pero en un lugar especial. En la última escena, aparece el escritorio de trabajo de Homer repleto de fotos de Maggie, y en la placa, con las letras recortadas, aparece la frase “Do it for her” (“Hazlo por ella”)</p>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
 					<div class="col-in-about">
 						<span class="in-sed">2</span>
 						<div class="left-sit">
-							<h6><a href="#">Sed ut perspiciatis unde omnis iste natus error sit</a></h6>
-							<p>Mes cuml dia sed net lacus utenias cet inge iiqt es site am eismod icto ligulate ameti dapibustic du nt mtsen lus </p>
+							<h6><a href="#">Marge contra el monorrail</a></h6>
+							<p>Mejor momento: Cuando todo el pueblo se pone a cantar la canción del monorraíl y la escena final.</p>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
 					<div class="col-in-about">
 						<span class="in-sed">3</span>
 						<div class="left-sit">
-							<h6><a href="#">Sed ut perspiciatis unde omnis iste natus error sit</a></h6>
-							<p>Mes cuml dia sed net lacus utenias cet inge iiqt es site am eismod icto ligulate ameti dapibustic du nt mtsen lus</p>
+							<h6><a href="#">Homer Bateador</a></h6>
+							<p>Mejores frases: “¡Eh, perdone, lo confundí con un ciervo! ¡Je, je! No se preocupe, me ocurre con frecuencia”</p>
 						</div>
 						<div class="clearfix"> </div>
 					</div>	
