--- a/p2/about.html
+++ b/p2/about.html
@@ -112,7 +112,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="col-in-about">
 						<span class="in-sed">1</span>
 						<div class="left-sit">
-							<h6><a href="#">Y con Maggie, Tres</a></h6>
+							<h6><a href="#">Y con Maggie, Tres (TEMPORADA 6)</a></h6>
 							<p>Mejor momento: El Sr. Burns readmite a Homer en la Central Nuclear, pero le coloca una placa que dice “Don’t forget: you’re here forever” (“No lo olvide: Usted está aquí para siempre”) para recordarle que no podrá volver a renunciar. Marge da a luz y Homer, que en un principio rechazaba la idea de un nuevo bebé, se enamora de Maggie desde el primer momento. Al volver al presente, Bart y Lisa se siguen preguntando por qué no hay fotos de Maggie. Homer les dice que sí que hay, pero en un lugar especial. En la última escena, aparece el escritorio de trabajo de Homer repleto de fotos de Maggie, y en la placa, con las letras recortadas, aparece la frase “Do it for her” (“Hazlo por ella”)</p>
 						</div>
 						<div class="clearfix"> </div>
@@ -120,7 +120,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="col-in-about">
 						<span class="in-sed">2</span>
 						<div class="left-sit">
-							<h6><a href="#">Marge contra el monorrail</a></h6>
+							<h6><a href="#">Marge contra el monorrail(TEMPORADA 4)</a></h6>
 							<p>Mejor momento: Cuando todo el pueblo se pone a cantar la canción del monorraíl y la escena final.</p>
 						</div>
 						<div class="clearfix"> </div>
@@ -128,7 +128,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="col-in-about">
 						<span class="in-sed">3</span>
 						<div class="left-sit">
-							<h6><a href="#">Homer Bateador</a></h6>
+							<h6><a href="#">Homer Bateador(TEMPORADA 3)</a></h6>
 							<p>Mejores frases: “¡Eh, perdone, lo confundí con un ciervo! ¡Je, je! No se preocupe, me ocurre con frecuencia”</p>
 						</div>
 						<div class="clearfix"> </div>
