--- a/p2/blog.html
+++ b/p2/blog.html
@@ -79,7 +79,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="content">
 			 <div class="blog_grid ">
 		     <div class="col-md-6 blog_box">
-		        <a href="single.html" ><img src="images/Springfield-de-los-Simpson.jpg" alt="trabajo en equipo de lm" class="img-responsive zoom-img"></a>
+		        <a href="#" ><img src="images/Springfield-de-los-Simpson.jpg" alt="trabajo en equipo de lm" class="img-responsive zoom-img"></a>
 		     	<h3><a href="single.html">SPRINGFIELD COMO CIUDAD EN LA SERIE</a></h3>
 		     	<div class="links">
 		  		    <ul>
@@ -87,10 +87,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		  		    </ul>
 		  		</div>
 		     	<p>Esto es el pueblo en que nuestros personajes viven y donde ocurren la mayoria de sus emocionantes historias.(Springfield-USA)</p>
-		        <a class="hvr-sweep-to-right" href="single.html">Read More</a>
+		        <a class="hvr-sweep-to-right" href="#">Read More</a>
 		     </div>  
 		     <div class="col-md-6 blog_box">
-		        <a href="single.html" ><img src="images/ViajeyViaje_Springfield_3.png" alt="trabajo en equipo de lm" class="img-responsive zoom-img"></a>
+		        <a href="#" ><img src="images/ViajeyViaje_Springfield_3.png" alt="trabajo en equipo de lm" class="img-responsive zoom-img"></a>
 		     	<h3><a href="single.html">PARQUE TEMATICO DE LOS SIMPSON</a></h3>
 		     	<div class="links">
 		  		    <ul>
@@ -104,7 +104,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		   </div>
 			 <div class="blog_grid ">
 		     <div class="col-md-6 blog_box">
-		        <a href="single.html" ><img src="images/F46.jpg" alt="p2" class="img-responsive zoom-img"></a>
+		        <a href="#" ><img src="images/F46.jpg" alt="p2" class="img-responsive zoom-img"></a>
 		     	<h3><a href="single.html">LUGARES MAS SIGNIFICATIVOS EN LA SERIE</a></h3>
 		     	<div class="links">
 		  		    <ul>
@@ -117,7 +117,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 		     </div>  
 		     <div class="col-md-6 blog_box">
-		        <a href="single.html" ><img src="images/simpson-casa-house-groening-03.jpg" alt="p2" class="img-responsive zoom-img"></a>
+		        <a href="#" ><img src="images/simpson-casa-house-groening-03.jpg" alt="p2" class="img-responsive zoom-img"></a>
 		     	<h3><a href="single.html">CASA DE LOS PERSONAJES PRINCIPALES</a></h3>
 		     	<div class="links">
 		  		    <ul>
@@ -136,7 +136,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         
     
 		     <div class="col-md-6 blog_box">
-		            <a href="single.html" ><img src="images/Springfield_Nuclear_Power_Plant.gif" alt="p2" class="img-responsive zoom-img"></a>
+		            <a href="#" ><img src="images/Springfield_Nuclear_Power_Plant.gif" alt="p2" class="img-responsive zoom-img"></a>
 		     	    <h3><a href="single.html">CENTRAL NUCLEAR DE SPRINGFIELD
                     </a></h3>
 		     	     <div class="links">
