CSS Editado y muertes cuadrado, Dani editó single

--- a/p2/single.html
+++ b/p2/single.html
@@ -104,15 +104,53 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				    <li><p class="at-in">- <ins>Lisa Simpson</ins>: Es la segunda hija de la familia. Tiene 8 años, es muy madura para su edad, aunque también es egocéntrica y siempre quiere ser completamente perfecta; en muchas ocasiones ha sido criticada por ser la opinión que a nadie le interesa oír y por su idealismo desenfocado que la lleva a participar en movimientos y actividades de protesta donde lejos de solo protestar incluso intenta imponer su punto de vista obligatoriamente como sucedería cuando se hizo vegetariana. Lleva una relación estresante con su hermano Bart, aunque cuando se ponen de acuerdo son una dupla efectiva y de temer que han tenido logros enormes como detener criminales o ayudar a gente importante. Tiene un IQ de 158.</p></li>
 					<li><p class="at-in">- <ins>Maggie Simpson</ins>: Es la bebé de 1 año, y físicamente la versión preescolar de Lisa. Tiene el cerebro de un constante infractor de la ley e incluso en varias ocasiones ha usado armas de fuego y agredido gente; a pesar de ello mantiene la inocencia y ternura de una bebé. Siempre demuestra un comportamiento más inteligente y despierto de lo que un niño de su edad debería tener. Tiene la manía de llevar un chupete en la boca que rara vez se lo quita. Solo ha hablado ocho veces y solo tres se confirmaron.</p></li>
 				</ul>
+				<br>
 			<div class="col-md-8 sed-in">
 			   <h3><ins>Personajes Secundarios</ins></h3>
 			   <ul class="social" style="list-style-type:disc">
-		            <li><p class="at-in">- <ins>#</ins>:</p></li>
-		            <li><p class="at-in">- <ins>#</ins>:</p></li>
-		            <li><p class="at-in">- <ins>#</ins>:</p></li>
-				    <li><p class="at-in">- <ins>#</ins>:</p></li>
+					<li><p class="at-in">- <ins>Hugo Simpsons</ins>: Es el hermano gemelo de Bart Simpson durante su única aparición en el episodio "Treehouse of Horror VII" de la octava temporada.</p></li>
+		            <li><p class="at-in">- <ins>Abe Simpsons</ins>: Es el padre de Homer, sargento durante la Segunda Guerra Mundial, y también se muestra que siendo un niño estuvo en la Primera Guerra Mundial; fue enviado a una casa de retiro por Homer poco después de casarse con Marge, aunque en algunos episodios vive con la familia.</p></li>
+					<li><p class="at-in">- <ins>Mona Simpsons</ins>: Madre de Homer, y esposa de Abraham Simpson, se hizo fugitiva buscando personas que compartan sus ideales, se unió a la manifestación contra Montgomery Burns. Fallecida a los 79 años de edad.</p></li>
+					<li><p class="at-in">- <ins>"Jackie" Bouvier</ins>: Madre de la Familia Bouvier (Patty, Selma y Marge)</p></li>
+					<li><p class="at-in">- <ins>Clancy Bouvier</ins>: Padre de Marge, Patty y Selma. Fallecido. Era Azafato de vuelo.</p></li>
+		            <li><p class="at-in">- <ins>Ned Flanders</ins>: Padre de la Familia Flanders. Quedó viudo en el capítulo Alone Again, Natura-Diddily y se volvió a casar en Ned 'n Edna's Blend y quedó viudo de nuevo tras la muerte de Edna Krabappel en la 25ª temporada.</p></li>
+		            <li><p class="at-in">- <ins>Mod Flanders</ins>: Madre de Rod y Todd (de la familia Flanders). Muere tras caer cuatro metros cuando Homer se agachó a recoger una moneda justo que la camisa cuando le llegó a ella en el episodio "Nuevamente Soliririjillo".</p></li>
+				    <li><p class="at-in">- <ins>Patty Bouvier</ins>: Hermana de Marge y gemela de Selma. Es lesbiana en la serie.</p></li>
+					<li><p class="at-in">- <ins>Selma Bouvier</ins>: Hermana de Marge y gemela de Patty. Ella y su hermana gemela tienen una iguana como mascota</p></li>
+					<li><p class="at-in">- <ins>Herbert Power</ins>: Hijo ilegítimo de Abraham Simpson y hermano de Homer.</p></li>
+					<li><p class="at-in">- <ins>Waylon Smithers Jr.</ins>: Asistente ejecutivo de Burns e hijo de Waylon Smithers Sr. Es homosexual.</p></li>
+					<li><p class="at-in">- <ins>Sr. Montgomery Burns</ins>: Dueño de la Central Nuclear y millonario. Se le conoce en la serie como una figura poco respetable y superficial.</p></li>
+					<li><p class="at-in">- <ins>Lenny</ins>: Compañero de Homer del Sector 7-G. Nunca se separa de Carl.</p></li>
+					<li><p class="at-in">- <ins>Carl</ins>: Compañero afroamericano de Homer del Sector 7-G. Nunca se separa de Lenny.</p></li>
+					<li><p class="at-in">- <ins>Frank "Grimey" Grimes</ins>: Antiguo empleado de la central. Falleció electrocutado en un ataque de locura cuando ridiculizaba "la forma de trabajar" de Homer Simpson, enemigo declarado, y es padre de Frank Grimes Jr.</p></li>
+					<li><p class="at-in">- <ins>Barra Inerte de Carbono</ins>: Dicen que es un empleado de la planta nuclear cuando Homer viaja al espacio, y aparece en la plantilla de empleados del Sr. Burns, básicamente se le usa como excusa para no otorgarle reconocimientos a Homer ya que la normativa de la planta exige que todos deben tener por lo menos uno, pero entregándole premios se puede aplazar indefinidamente entregárselos a él.</p></li>
+					<li><p class="at-in">- <ins>Milhouse Van Houten</ins>: Hijo menor de la familia Van Houten. Gemelo de Jenny. Mejor amigo de Bart Simpson y su hermana Lisa es su amor platónico. Asmático y con trastornos de personalidad.</p></li>
+					<li><p class="at-in">- <ins>Kirk Van Houten</ins>: Padre de la familia Van Houten. Divorciado y reconciliado con Luann.</p></li>
+					<li><p class="at-in">- <ins>Luann Van Houten</ins>: Madre de la familia Van Houten. Divorciada y reconciliada con Kirk. Se vuelven a casar en la temporada 19. Nacida en Shelbyville.</p></li>
+					<li><p class="at-in">- <ins>Apu Nahasapeemapetilon</ins>: Padre de la familia Nahasapeemapetilon. Socio principal del Kwik-E-Mart en el cual trabaja 18 horas al día. Fue integrante de Be Sharps (Los Borbotones en Latinoamérica) junto con Homer.</p></li>
+					<li><p class="at-in">- <ins>Manjula Nahasapeemapetilon</ins>: Madre de la familia Nahasapeemapetilon. Comprometida con Apu desde su niñez.</p></li>
+					<li><p class="at-in">- <ins>Cletus Spuckler</ins>: Padre de la familia Spuckler. A pesar de ser muy humilde siempre busca como mantener a su numerosa familia.</p></li>
+					<li><p class="at-in">- <ins>Brandine Spuckler</ins>: Madre de la familia Spuckler. Es la esposa y hermana mayor de Cletus. En algunos episodios también se la mencionó como madre de Cletus (gag). Es Cocinera y tiene 36 hijos con Cletus.</p></li>
+					<li><p class="at-in">- <ins>Nelson Muntz</ins>: Bravucón excesivo, amigo y/o enemigo de Bart y ex-novio de Lisa. Cada vez que molesta o se burla de alguien le añade su coletilla HA-HA.</p></li>
+					<li><p class="at-in">- <ins>Martin Prince Jr.</ins>: Hijo de la Familia Prince. Su coeficiente intelectual es de 216, siendo el más inteligente de la Escuela Primaria de Springfield. Rivaliza con Lisa.</p></li>
+					<li><p class="at-in">- <ins>Base de Datos o Database</ins>: chico inteligente y amigo de Martin y Lisa.</p></li>
+					<li><p class="at-in">- <ins>Jimbo "Jones"</ins>: Abusón y estudiante de la Escuela Primaria de Springfield. Siempre lleva puesta una gorra de lana morada, la cual oculta su calvicie.</p></li>
+					<li><p class="at-in">- <ins>Dolph Starbeam</ins>: Abusón y estudiante de la Escuela Primaria de Springfield. Aparentemente novio de la madre de Jimbo.</p></li>
+					<li><p class="at-in">- <ins>Kernie Zzyzwicz Jr.</ins>: Abusón de 26 años. Tiene un hijo igual a él. Es el estudiante más viejo de la Escuela Primaria Springfield.</p></li>
+					<li><p class="at-in">- <ins>Terry</ins>: Hermana gemela de Sherry, es actualmente novia de Bart.</p></li>
+					<li><p class="at-in">- <ins>Sherry</ins>: Hermana gemela de Terry. Ambas son estudiantes de la Escuela Primaria de Springfield.</p></li>
+					<li><p class="at-in">- <ins>Ütter Zorker</ins>: Niño de intercambio alemán. Fanático de la comida basura.</p></li>
+					<li><p class="at-in">- <ins>Ralph Wiggum</ins>: Compañero de clase y ex-novio de Lisa. Tiene pocas luces y siempre tiene algún comentario gracioso para una situación seria.</p></li>
+					<li><p class="at-in">- <ins>Clancy Wiggum</ins>: Padre de la Familia Wiggum. Es el jefe del departamento de policía de Springfield. De joven fue agente de seguridad de la secundaria Springfield, en donde Mona Simpson curó accidentalmente su asma. Ascendido a Comisionado y ex integrante de Be Sharps.</p></li>
+					<li><p class="at-in">- <ins>Sarah Wiggum</ins>: Esposa de Clancy y Madre de la Familia Wiggum.</p></li>
 					<li><p class="at-in">- <ins>#</ins>:</p></li>
-					<li><p class="at-in">- <ins>Maggie Simpson</ins>: Es la bebé de 1 año, y físicamente la versión preescolar de Lisa. Tiene el cerebro de un constante infractor de la ley e incluso en varias ocasiones ha usado armas de fuego y agredido gente; a pesar de ello mantiene la inocencia y ternura de una bebé. Siempre demuestra un comportamiento más inteligente y despierto de lo que un niño de su edad debería tener. Tiene la manía de llevar un chupete en la boca que rara vez se lo quita. Solo ha hablado ocho veces y solo tres se confirmaron.</p></li>
+					<li><p class="at-in">- <ins>#</ins>:</p></li>
+					<li><p class="at-in">- <ins>#</ins>:</p></li>
+					<li><p class="at-in">- <ins>#</ins>:</p></li>
+					<li><p class="at-in">- <ins>#</ins>:</p></li>
+					<li><p class="at-in">- <ins>#</ins>:</p></li>
+					<li><p class="at-in">- <ins>#</ins>:</p></li>
+					
 				</ul>
 			</div>
  		</div>
