--- a/p2/muertes.html
+++ b/p2/muertes.html
@@ -1,4 +1,5 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
+
 <html>
 <head>
 <title>Los simpsonspedium</title>
@@ -82,7 +83,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<h1>MUERTES DE PERSONAJES A LO LARGO DE LA SERIE</h1>
 <br/><p>Durante la serie, varios personajes, algunos secundarios y otros menores, han muerto. Otros han sido asesinados de broma en los especiales de terror.
 </p><br/>
-<li>Antes del Comienzo de <b>Los Simpsons</b> Hubert Simpson</a>, muere en un corto de The Tracey Ullman Show llamado "The Funeral"</li>
+<ul><li>Antes del Comienzo de <b>Los Simpsons</b> Hubert Simpson</a>, muere en un corto de The Tracey Ullman Show llamado "The Funeral"</li></ul>
 <h2>Flashbacks</h2>
 <li>Clancy Bouvier, en Jazzy and the Pussycats. Marge dice que murió un poco después de haberse casado con Homer.
 </li><li> Snowball I, muere tras ser atropellado por un camión conducido por Clovis Quimby. La muerte es mencionada por primera vez en Simpsons Roasting On An Open Fire" con Clovis Quimby siendo mencionado como el asesino en "Treehouse of Horror III".
@@ -222,13 +223,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </li>
 <h2>Temporada 27</h2>
 <li>Nibbles, el hamster de la escuela, muere por que lisa lo descuidó por demasiado tiempo por cuidar a otros animales como ayudante de un veterinario en "Lisa the Veterinarian"
-</li><br/>
+</li></ul><br/>
 <h5>TOP MUERTES DE LOS SIMPSONS: VIDEO</H5>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/G_y2hAVhk-c" frameborder="0" allowfullscreen></iframe>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/QOR45nGPrWc" frameborder="0" allowfullscreen></iframe>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/Z9dklFGwRes" frameborder="0" allowfullscreen></iframe>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/1rgUR4udpl8" frameborder="0" allowfullscreen></iframe>
-</tbody>		<br/>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/1rgUR4udpl8" frameborder="0" allowfullscreen></iframe><br/>
 				</div>
 		</div>
 </div>
