--- a/p2/single.html
+++ b/p2/single.html
@@ -143,10 +143,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<li><p class="at-in">- <ins>Ralph Wiggum</ins>: Compañero de clase y ex-novio de Lisa. Tiene pocas luces y siempre tiene algún comentario gracioso para una situación seria.</p></li>
 					<li><p class="at-in">- <ins>Clancy Wiggum</ins>: Padre de la Familia Wiggum. Es el jefe del departamento de policía de Springfield. De joven fue agente de seguridad de la secundaria Springfield, en donde Mona Simpson curó accidentalmente su asma. Ascendido a Comisionado y ex integrante de Be Sharps.</p></li>
 					<li><p class="at-in">- <ins>Sarah Wiggum</ins>: Esposa de Clancy y Madre de la Familia Wiggum.</p></li>
-					<li><p class="at-in">- <ins>#</ins>:</p></li>
-					<li><p class="at-in">- <ins>#</ins>:</p></li>
-					<li><p class="at-in">- <ins>#</ins>:</p></li>
-					<li><p class="at-in">- <ins>#</ins>:</p></li>
+					<li><p class="at-in">- <ins>Inspector Chalmers</ins>: Es el inspector de las escuelas de Springfield, aparece mucho por la Escuela Primaria de Springfield</p></li>
+					<li><p class="at-in">- <ins>Director Seymour Skinner / Armin Tamzarian</ins>: Es el director actual de la escuela, aunque verdaderamente resulta ser un militar compañero del verdadero seymour skinner, pero reemplazó su identidad (aunque a todos les pareció bien)</p></li>
+					<li><p class="at-in">- <ins>Agnes Skinner</ins>: Madre del Director Seymour Skinner.</p></li>
+					<li><p class="at-in">- <ins>Edna Krabappel</ins>: Profesora de la clase de Bart Simpson, se le conoce, en general, como una mujer soltera y amargada. Mujer de Ned Flanders hasta su fallecimiento en la temporada 25.</p></li>
+					<li><p class="at-in">- <ins>Elizabeth Hoover</ins>: Profesora de la clase de Lisa Simpson.</p></li>
+					<li><p class="at-in">- <ins>William "Willie" MacGoran</ins>: Encargado de mantenimiento de la Escuela Primaria de Springfield, es escocés y va muy cabreado.</p></li>
+					<li><p class="at-in">- <ins>Otto Mann</ins>: Conductor del autobus escolar de la Escuela Primaria de Springfield, es metalero y siempre va con los cascos a todos lados.</p></li>
 					<li><p class="at-in">- <ins>#</ins>:</p></li>
 					<li><p class="at-in">- <ins>#</ins>:</p></li>
 					<li><p class="at-in">- <ins>#</ins>:</p></li>
