--- a/p2/about.html
+++ b/p2/about.html
@@ -45,8 +45,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			  <span class="menu"><img src="images/menu.png" alt=""> </span>
 
 					    <ul>
-							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="about.html">Mejores momentos</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li class="active"><a href="about.html">Mejores momentos</a></li>
 							<li><a href="muertes.html">Curiosidades</a></li>
 							<li><a href="blog.html">Springfield</a></li>
                             <li><a href="single.html">Personajes</a></li>
